# Neuro-Controller

./: .gitignore  CMakeLists.txt  README.md  pt1.txt
cfg/: config.ini
inc/: main.h  ncHelper.h  neuralController.h  neural_controller.h
misc/: neuralController copy.c  neural_controller.c  test.c  test2.c  test3.c
nucleo-l432kc-freertos/: .mxproject  Makefile  STM32-for-VSCode.config.yaml  STM32Make.make  nucleo-l432kc-freertos.ioc
nucleo-l432kc-freertos/Core/Inc/: main.h  stm32l4xx_hal_conf.h
nucleo-l432kc-freertos/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
nucleo-l432kc-freertos/EWARM/: Project.eww  nucleo-l432kc-freertos.ewd  nucleo-l432kc-freertos.ewp  stm32l432xx_flash.icf  stm32l432xx_sram.icf
scripts/: pt1.py  pt2.py  serialTest.py  testNC.py
src/: config.ini  config.json  main.c  ncHelper.c  neuralController.c  neural_controller.c
